force-app/main/default/objects/Cricket__c/Cricket__c.object-meta.xml
<CustomObject>
    <label>Cricketer</label>
    <nameField>
        <displayFormat>CRIT-{0000}</displayFormat>
        <label>Cricketer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricketers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>