force-app/main/default/objects/Cricket__c/fields/Cricketer_Name__c.field-meta.xml
<CustomField>
    <fullName>Cricketer_Name__c</fullName>
    <label>Cricketer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>