force-app/main/default/objects/Cricket__c/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <formula>IMAGE ( Image_url__c , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Images</label>
    <type>Text</type>
</CustomField>