force-app/main/default/objects/Cricket__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>West indies</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>